org.mdmi.core.runtime/src/org/mdmi/core/engine/xml/XPathParser.java
// Generated from XPath.g4 by ANTLR 4.2
package org.mdmi.core.engine.xml;

import java.util.List;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class XPathParser extends Parser {
	protected static final DFA[] _decisionToDFA;

	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();

	public static final int T__7 = 1, T__6 = 2, T__5 = 3, T__4 = 4, T__3 = 5, T__2 = 6, T__1 = 7, T__0 = 8, PATHSEP = 9,
			ABRPATH = 10, LPAR = 11, RPAR = 12, LBRAC = 13, RBRAC = 14, MINUS = 15, PLUS = 16, DOT = 17, MUL = 18,
			DOTDOT = 19, AT = 20, COMMA = 21, PIPE = 22, LESS = 23, MORE = 24, LE = 25, GE = 26, COLON = 27, CC = 28,
			APOS = 29, QUOT = 30, NodeType = 31, Number = 32, AxisName = 33, Literal = 34, Whitespace = 35, NCName = 36;

	public static final String[] tokenNames = {
			"<INVALID>", "'or'", "'!='", "'and'", "'$'", "'='", "'processing-instruction'", "'div'", "'mod'", "'/'",
			"'//'", "'('", "')'", "'['", "']'", "'-'", "'+'", "'.'", "'*'", "'..'", "'@'", "','", "'|'", "'<'", "'>'",
			"'<='", "'>='", "':'", "'::'", "'''", "'\"'", "NodeType", "Number", "AxisName", "Literal", "Whitespace",
			"NCName" };

	public static final int RULE_main = 0, RULE_locationPath = 1, RULE_absoluteLocationPathNoroot = 2,
			RULE_relativeLocationPath = 3, RULE_step = 4, RULE_axisSpecifier = 5, RULE_nodeTest = 6, RULE_predicate = 7,
			RULE_abbreviatedStep = 8, RULE_expr = 9, RULE_primaryExpr = 10, RULE_functionCall = 11,
			RULE_unionExprNoRoot = 12, RULE_pathExprNoRoot = 13, RULE_filterExpr = 14, RULE_orExpr = 15,
			RULE_andExpr = 16, RULE_equalityExpr = 17, RULE_relationalExpr = 18, RULE_additiveExpr = 19,
			RULE_multiplicativeExpr = 20, RULE_unaryExprNoRoot = 21, RULE_qName = 22, RULE_functionName = 23,
			RULE_variableReference = 24, RULE_nameTest = 25, RULE_nCName = 26;

	public static final String[] ruleNames = {
			"main", "locationPath", "absoluteLocationPathNoroot", "relativeLocationPath", "step", "axisSpecifier",
			"nodeTest", "predicate", "abbreviatedStep", "expr", "primaryExpr", "functionCall", "unionExprNoRoot",
			"pathExprNoRoot", "filterExpr", "orExpr", "andExpr", "equalityExpr", "relationalExpr", "additiveExpr",
			"multiplicativeExpr", "unaryExprNoRoot", "qName", "functionName", "variableReference", "nameTest",
			"nCName" };

	@Override
	public String getGrammarFileName() {
		return "XPath.g4";
	}

	@Override
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	public String[] getRuleNames() {
		return ruleNames;
	}

	@Override
	public String getSerializedATN() {
		return _serializedATN;
	}

	@Override
	public ATN getATN() {
		return _ATN;
	}

	public XPathParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class MainContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class, 0);
		}

		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_main;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterMain(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitMain(this);
			}
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(54);
				expr();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocationPathContext extends ParserRuleContext {
		public RelativeLocationPathContext relativeLocationPath() {
			return getRuleContext(RelativeLocationPathContext.class, 0);
		}

		public AbsoluteLocationPathNorootContext absoluteLocationPathNoroot() {
			return getRuleContext(AbsoluteLocationPathNorootContext.class, 0);
		}

		public LocationPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_locationPath;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterLocationPath(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitLocationPath(this);
			}
		}
	}

	public final LocationPathContext locationPath() throws RecognitionException {
		LocationPathContext _localctx = new LocationPathContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_locationPath);
		try {
			setState(58);
			switch (_input.LA(1)) {
				case 6:
				case DOT:
				case MUL:
				case DOTDOT:
				case AT:
				case NodeType:
				case AxisName:
				case NCName:
					enterOuterAlt(_localctx, 1); {
					setState(56);
					relativeLocationPath();
				}
					break;
				case PATHSEP:
				case ABRPATH:
					enterOuterAlt(_localctx, 2); {
					setState(57);
					absoluteLocationPathNoroot();
				}
					break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbsoluteLocationPathNorootContext extends ParserRuleContext {
		public RelativeLocationPathContext relativeLocationPath() {
			return getRuleContext(RelativeLocationPathContext.class, 0);
		}

		public AbsoluteLocationPathNorootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_absoluteLocationPathNoroot;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterAbsoluteLocationPathNoroot(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitAbsoluteLocationPathNoroot(this);
			}
		}
	}

	public final AbsoluteLocationPathNorootContext absoluteLocationPathNoroot() throws RecognitionException {
		AbsoluteLocationPathNorootContext _localctx = new AbsoluteLocationPathNorootContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_absoluteLocationPathNoroot);
		try {
			setState(64);
			switch (_input.LA(1)) {
				case PATHSEP:
					enterOuterAlt(_localctx, 1); {
					setState(60);
					match(PATHSEP);
					setState(61);
					relativeLocationPath();
				}
					break;
				case ABRPATH:
					enterOuterAlt(_localctx, 2); {
					setState(62);
					match(ABRPATH);
					setState(63);
					relativeLocationPath();
				}
					break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelativeLocationPathContext extends ParserRuleContext {
		public List<StepContext> step() {
			return getRuleContexts(StepContext.class);
		}

		public StepContext step(int i) {
			return getRuleContext(StepContext.class, i);
		}

		public RelativeLocationPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_relativeLocationPath;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterRelativeLocationPath(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitRelativeLocationPath(this);
			}
		}
	}

	public final RelativeLocationPathContext relativeLocationPath() throws RecognitionException {
		RelativeLocationPathContext _localctx = new RelativeLocationPathContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_relativeLocationPath);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(66);
				step();
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == PATHSEP || _la == ABRPATH) {
					{
						{
							setState(67);
							_la = _input.LA(1);
							if (!(_la == PATHSEP || _la == ABRPATH)) {
								_errHandler.recoverInline(this);
							}
							consume();
							setState(68);
							step();
						}
					}
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StepContext extends ParserRuleContext {
		public PredicateContext predicate(int i) {
			return getRuleContext(PredicateContext.class, i);
		}

		public List<PredicateContext> predicate() {
			return getRuleContexts(PredicateContext.class);
		}

		public AxisSpecifierContext axisSpecifier() {
			return getRuleContext(AxisSpecifierContext.class, 0);
		}

		public NodeTestContext nodeTest() {
			return getRuleContext(NodeTestContext.class, 0);
		}

		public AbbreviatedStepContext abbreviatedStep() {
			return getRuleContext(AbbreviatedStepContext.class, 0);
		}

		public StepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_step;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterStep(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitStep(this);
			}
		}
	}

	public final StepContext step() throws RecognitionException {
		StepContext _localctx = new StepContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_step);
		int _la;
		try {
			setState(83);
			switch (_input.LA(1)) {
				case 6:
				case MUL:
				case AT:
				case NodeType:
				case AxisName:
				case NCName:
					enterOuterAlt(_localctx, 1); {
					setState(74);
					axisSpecifier();
					setState(75);
					nodeTest();
					setState(79);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la == LBRAC) {
						{
							{
								setState(76);
								predicate();
							}
						}
						setState(81);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
				}
					break;
				case DOT:
				case DOTDOT:
					enterOuterAlt(_localctx, 2); {
					setState(82);
					abbreviatedStep();
				}
					break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AxisSpecifierContext extends ParserRuleContext {
		public TerminalNode AxisName() {
			return getToken(XPathParser.AxisName, 0);
		}

		public AxisSpecifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_axisSpecifier;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterAxisSpecifier(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitAxisSpecifier(this);
			}
		}
	}

	public final AxisSpecifierContext axisSpecifier() throws RecognitionException {
		AxisSpecifierContext _localctx = new AxisSpecifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_axisSpecifier);
		int _la;
		try {
			setState(90);
			switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
				case 1:
					enterOuterAlt(_localctx, 1); {
					setState(85);
					match(AxisName);
					setState(86);
					match(CC);
				}
					break;

				case 2:
					enterOuterAlt(_localctx, 2); {
					setState(88);
					_la = _input.LA(1);
					if (_la == AT) {
						{
							setState(87);
							match(AT);
						}
					}

				}
					break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeTestContext extends ParserRuleContext {
		public TerminalNode Literal() {
			return getToken(XPathParser.Literal, 0);
		}

		public NameTestContext nameTest() {
			return getRuleContext(NameTestContext.class, 0);
		}

		public TerminalNode NodeType() {
			return getToken(XPathParser.NodeType, 0);
		}

		public NodeTestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_nodeTest;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterNodeTest(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitNodeTest(this);
			}
		}
	}

	public final NodeTestContext nodeTest() throws RecognitionException {
		NodeTestContext _localctx = new NodeTestContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nodeTest);
		try {
			setState(100);
			switch (_input.LA(1)) {
				case MUL:
				case AxisName:
				case NCName:
					enterOuterAlt(_localctx, 1); {
					setState(92);
					nameTest();
				}
					break;
				case NodeType:
					enterOuterAlt(_localctx, 2); {
					setState(93);
					match(NodeType);
					setState(94);
					match(LPAR);
					setState(95);
					match(RPAR);
				}
					break;
				case 6:
					enterOuterAlt(_localctx, 3); {
					setState(96);
					match(6);
					setState(97);
					match(LPAR);
					setState(98);
					match(Literal);
					setState(99);
					match(RPAR);
				}
					break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class, 0);
		}

		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_predicate;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterPredicate(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitPredicate(this);
			}
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_predicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(102);
				match(LBRAC);
				setState(103);
				expr();
				setState(104);
				match(RBRAC);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbbreviatedStepContext extends ParserRuleContext {
		public AbbreviatedStepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_abbreviatedStep;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterAbbreviatedStep(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitAbbreviatedStep(this);
			}
		}
	}

	public final AbbreviatedStepContext abbreviatedStep() throws RecognitionException {
		AbbreviatedStepContext _localctx = new AbbreviatedStepContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_abbreviatedStep);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(106);
				_la = _input.LA(1);
				if (!(_la == DOT || _la == DOTDOT)) {
					_errHandler.recoverInline(this);
				}
				consume();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public OrExprContext orExpr() {
			return getRuleContext(OrExprContext.class, 0);
		}

		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_expr;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterExpr(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitExpr(this);
			}
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(108);
				orExpr();
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimaryExprContext extends ParserRuleContext {
		public VariableReferenceContext variableReference() {
			return getRuleContext(VariableReferenceContext.class, 0);
		}

		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class, 0);
		}

		public TerminalNode Literal() {
			return getToken(XPathParser.Literal, 0);
		}

		public ExprContext expr() {
			return getRuleContext(ExprContext.class, 0);
		}

		public TerminalNode Number() {
			return getToken(XPathParser.Number, 0);
		}

		public PrimaryExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_primaryExpr;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterPrimaryExpr(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitPrimaryExpr(this);
			}
		}
	}

	public final PrimaryExprContext primaryExpr() throws RecognitionException {
		PrimaryExprContext _localctx = new PrimaryExprContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_primaryExpr);
		try {
			setState(118);
			switch (_input.LA(1)) {
				case 4:
					enterOuterAlt(_localctx, 1); {
					setState(110);
					variableReference();
				}
					break;
				case LPAR:
					enterOuterAlt(_localctx, 2); {
					setState(111);
					match(LPAR);
					setState(112);
					expr();
					setState(113);
					match(RPAR);
				}
					break;
				case Literal:
					enterOuterAlt(_localctx, 3); {
					setState(115);
					match(Literal);
				}
					break;
				case Number:
					enterOuterAlt(_localctx, 4); {
					setState(116);
					match(Number);
				}
					break;
				case AxisName:
				case NCName:
					enterOuterAlt(_localctx, 5); {
					setState(117);
					functionCall();
				}
					break;
				default:
					throw new NoViableAltException(this);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}

		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class, i);
		}

		public FunctionNameContext functionName() {
			return getRuleContext(FunctionNameContext.class, 0);
		}

		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_functionCall;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterFunctionCall(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitFunctionCall(this);
			}
		}
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_functionCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
				setState(120);
				functionName();
				setState(121);
				match(LPAR);
				setState(130);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) &
						((1L << 4) | (1L << 6) | (1L << PATHSEP) | (1L << ABRPATH) | (1L << LPAR) | (1L << MINUS) |
								(1L << DOT) | (1L << MUL) | (1L << DOTDOT) | (1L << AT) | (1L << NodeType) |
								(1L << Number) | (1L << AxisName) | (1L << Literal) | (1L << NCName))) != 0)) {
					{
						setState(122);
						expr();
						setState(127);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la == COMMA) {
							{
								{
									setState(123);
									match(COMMA);
									setState(124);
									expr();
								}
							}
							setState(129);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
					}
				}

				setState(132);
				match(RPAR);
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnionExprNoRootContext extends ParserRuleContext {
		public PathExprNoRootContext pathExprNoRoot() {
			return getRuleContext(PathExprNoRootContext.class, 0);
		}

		public UnionExprNoRootContext unionExprNoRoot() {
			return getRuleContext(UnionExprNoRootContext.class, 0);
		}

		public UnionExprNoRootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_unionExprNoRoot;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterUnionExprNoRoot(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitUnionExprNoRoot(this);
			}
		}
	}

	public final UnionExprNoRootContext unionExprNoRoot() throws RecognitionException {
		UnionExprNoRootContext _localctx = new UnionExprNoRootContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_unionExprNoRoot);
		int _la;
		try {
			setState(142);
			switch (getInterpreter().adaptivePredict(_input, 12, _ctx)) {
				case 1:
					enterOuterAlt(_localctx, 1); {
					setState(134);
					pathExprNoRoot();
					setState(137);
					_la = _input.LA(1);
					if (_la == PIPE) {
						{
							setState(135);
							match(PIPE);
							setState(136);
							unionExprNoRoot();
						}
					}

				}
					break;

				case 2:
					enterOuterAlt(_localctx, 2); {
					setState(139);
					match(PATHSEP);
					setState(140);
					match(PIPE);
					setState(141);
					unionExprNoRoot();
				}
					break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PathExprNoRootContext extends ParserRuleContext {
		public LocationPathContext locationPath() {
			return getRuleContext(LocationPathContext.class, 0);
		}

		public RelativeLocationPathContext relativeLocationPath() {
			return getRuleContext(RelativeLocationPathContext.class, 0);
		}

		public FilterExprContext filterExpr() {
			return getRuleContext(FilterExprContext.class, 0);
		}

		public PathExprNoRootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_pathExprNoRoot;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterPathExprNoRoot(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitPathExprNoRoot(this);
			}
		}
	}

	public final PathExprNoRootContext pathExprNoRoot() throws RecognitionException {
		PathExprNoRootContext _localctx = new PathExprNoRootContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_pathExprNoRoot);
		int _la;
		try {
			setState(150);
			switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
				case 1:
					enterOuterAlt(_localctx, 1); {
					setState(144);
					locationPath();
				}
					break;

				case 2:
					enterOuterAlt(_localctx, 2); {
					setState(145);
					filterExpr();
					setState(148);
					_la = _input.LA(1);
					if (_la == PATHSEP || _la == ABRPATH) {
						{
							setState(146);
							_la = _input.LA(1);
							if (!(_la == PATHSEP || _la == ABRPATH)) {
								_errHandler.recoverInline(this);
							}
							consume();
							setState(147);
							relativeLocationPath();
						}
					}

				}
					break;
			}
		} catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		} finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FilterExprContext extends ParserRuleContext {
		public PredicateContext predicate(int i) {
			return getRuleContext(PredicateContext.class, i);
		}

		public PrimaryExprContext primaryExpr() {
			return getRuleContext(PrimaryExprContext.class, 0);
		}

		public List<PredicateContext> predicate() {
			return getRuleContexts(PredicateContext.class);
		}

		public FilterExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}

		@Override
		public int getRuleIndex() {
			return RULE_filterExpr;
		}

		@Override
		public void enterRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).enterFilterExpr(this);
			}
		}

		@Override
		public void exitRule(ParseTreeListener listener) {
			if (listener instanceof XPathListener) {
				((XPathListener) listener).exitFilterExpr(this);
			}
		}
	}

	public final FilterExprContext filterExpr() throws RecognitionException {
		FilterExprContext _localctx = new FilterExprContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_filterExpr);
